tests/sources/invalid/borrow/constructor_move_errors.fire
// Constructor argument move errors

import @firescript/std.io.println;

class Wrapper {
    text: string;

    fn Wrapper(&mut this, text: string) {
        this.text = text;
    }
}

s1: string = "first";
w1: Wrapper = Wrapper(s1); // move into constructor parameter
println(s1); // Error: used after move  //~ ERROR FS-SEM-0001 @9

s2: string = "second";
w2: Wrapper = new Wrapper(s2); // move into constructor parameter
println(s2); // Error: used after move  //~ ERROR FS-SEM-0001 @9
